Add ABC tuning workload and benchmark etalon